fix: Scroll on mobile
Fixed Scroll on mobile and fixed logo on mobile staying on left

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,6 @@ html,
 body,
 .main {
   scroll-snap-type: y mandatory;
-  overflow-y: scroll;
   height: 100%;
   scroll-behavior: smooth;
 }
